[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "danflow"
version = "0.1.0"
description = "A unified toolkit for deep learning, machine learning, and data science workflows"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "numpy"
]